test/e2e/features/agentgateway/apikeyauthentication/testdata/secured-gateway-policy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-secure-gw
spec:
  parentRefs:
  - name: super-gateway
  hostnames:
  - "securegateways.com"
  rules:
  - backendRefs:
    - name: backend-0
      port: 8080
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: gw-policy
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: super-gateway
  traffic:
    apiKeyAuthentication:
      mode: Strict
      secretRef:
        name: gw-apikey-auth
---
apiVersion: v1
kind: Secret
metadata:
  name: gw-apikey-auth
stringData:
  client1: |
    {
      "key": "k-123",
      "metadata": {
        "group": "sales",
      }
    }
  client2: "k-456"
