test/e2e/features/agentgateway/apikeyauthentication/testdata/secured-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-secure
spec:
  parentRefs:
    - name: super-gateway
  hostnames:
    - "secureroute.com"
  rules:
    - backendRefs:
        - name: simple-svc
          port: 8080
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: route-policy
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: route-secure
  traffic:
    apiKeyAuthentication:
      mode: Strict
      secretRef:
        name: route-apikey-auth
---
apiVersion: v1
kind: Secret
metadata:
  name: route-apikey-auth
stringData:
  client1: |
    {
      "key": "k-1230",
      "metadata": {
        "group": "sales",
      }
    }
  client2: "k-4560"
